# Peek_A_Boo

./: .gitignore  Assembly-CSharp-Editor.csproj  Assembly-CSharp-firstpass.csproj  Assembly-CSharp.csproj  LICENSE  Peek-A-Boo.sln  README.md
Assets/Plugins/ENet-CSharp/: ENet-CSharp.nuspec
Assets/Plugins/ENet-CSharp/Source/Native/: enet.h
Assets/Scenes/: Main.unity  SampleScene.unity
Assets/Scripts/: ClientProtocol.cs  GameManager.cs  GeneratedProtocol.cs  HighlightSystem.cs  LevelTimer.cs  MenuController.cs  NetworkManager.cs  Peekaboo.cs  PlayerController.cs  ProceduralMapGenerator.cs  RemotePlayer.cs  RemotePlayerManager.cs  ScoreManager.cs  TagSystem.cs
Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
ProjectSettings/: ProjectSettings.asset
Skills/: README.md
Skills/Core/: game-manager.md  level-timer.md  protocol-defs.md  score-manager.md
Skills/Gameplay/: highlight-system.md  player-controller.md  tag-system.md
Skills/Network/: client-protocol.md  network-manager.md
Skills/UI/: menu-controller.md
Skills/World/: procedural-map-generator.md
Tools/: generate_protocol.py  protocol_defs.json
_bmad-output/: brainstorming-session-2026-05-02.md  game-brief.md  gds-workflow-status.yaml
docs/: BluePrint.md  phase1-scene-setup.md  phase2-gameplay-setup.md  scene-setup-instructions.md
server/: .gitignore  CMakeLists.txt
server/include/: player.h  protocol.h  types.h
server/proto/: peekaboo.proto
server/src/: generated_protocol.h  main.cpp  player.h  protocol.cpp  protocol.h  types.h
